# hybrid-clocks

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
.circleci/: config.yml
benches/: clocks.rs
env_logger/: index.html  struct.LogBuilder.html  struct.Logger.html
examples/: simple.rs
hlc-demo/: Cargo.toml
hlc-demo/src/: main.rs
hybrid_clocks/: enum.Error.html  index.html  sidebar-items.js  struct.Clock.html  struct.ManualClock.html  struct.Timestamp.html  struct.Wall.html  struct.WallT.html  trait.ClockSource.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.FromIterator.js  trait.IntoIterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Add.js  trait.DerefMut.js  trait.Index.js  trait.Sub.js
implementors/core/str/: trait.FromStr.js
implementors/hybrid_clocks/: trait.ClockSource.js
implementors/rand/distributions/: trait.Sample.js
implementors/std/error/: trait.Error.js
quickcheck/: fn.empty_shrinker.html  fn.quickcheck.html  fn.single_shrinker.html  index.html  struct.QuickCheck.html  struct.StdGen.html  struct.TestResult.html  trait.Arbitrary.html  trait.Gen.html  trait.Rng.html  trait.Testable.html
src/: lib.rs  serde_impl.rs
src/hybrid_clocks/src/: lib.rs.html
src/quickcheck/: arbitrary.rs.html  lib.rs.html  tester.rs.html
src/source/: manual.rs  mod.rs  wall_ms.rs  wall_ns.rs
tests/: clocks.rs
