[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
description = "Hybrid Logical Clocks"
homepage = "https://github.com/cstorey/hybrid-clocks"
license = "MIT"
name = "hybrid-clocks"
version = "0.5.3"
edition = "2018"

[dependencies]
thiserror = "1.0.9"
time = { version = "0.3.0", optional = true }

[dependencies.serde]
optional = true
version = "1.0"
[dependencies.serde_derive]
optional = true
version = "1.0"

[features]
serialization = ["serde", "serde_derive"]
deserialize-v1 = []
pretty-print = ["time"]

[dev-dependencies]
serde_json = "1.0"
suppositions = "0.1.4"

[profile]

[profile.release]
debug = true
