[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"
name = "hlc-demo"
version = "0.1.0"

[dependencies]
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.26"
log = "0.4.6"
serde_json = "1.0.39"
structopt = "0.2.15"
tokio = "0.1.19"

[dependencies.hybrid-clocks]
optional = false
path = "../"
